; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_47169.c_init_skb_buffer.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_47169.c_init_skb_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.skb_shared_info = type { i32, i64, i64, i64 }

@ui = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_skb_buffer(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.skb_shared_info*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.skb_shared_info*
  store %struct.skb_shared_info* %7, %struct.skb_shared_info** %5, align 8
  %8 = load %struct.skb_shared_info*, %struct.skb_shared_info** %5, align 8
  %9 = call i32 @memset(%struct.skb_shared_info* %8, i32 0, i32 32)
  %10 = load %struct.skb_shared_info*, %struct.skb_shared_info** %5, align 8
  %11 = getelementptr inbounds %struct.skb_shared_info, %struct.skb_shared_info* %10, i32 0, i32 0
  store i32 255, i32* %11, align 8
  %12 = load %struct.skb_shared_info*, %struct.skb_shared_info** %5, align 8
  %13 = getelementptr inbounds %struct.skb_shared_info, %struct.skb_shared_info* %12, i32 0, i32 3
  store i64 ptrtoint (%struct.TYPE_2__* @ui to i64), i64* %13, align 8
  %14 = load %struct.skb_shared_info*, %struct.skb_shared_info** %5, align 8
  %15 = getelementptr inbounds %struct.skb_shared_info, %struct.skb_shared_info* %14, i32 0, i32 2
  store i64 0, i64* %15, align 8
  %16 = load %struct.skb_shared_info*, %struct.skb_shared_info** %5, align 8
  %17 = getelementptr inbounds %struct.skb_shared_info, %struct.skb_shared_info* %16, i32 0, i32 1
  store i64 0, i64* %17, align 8
  %18 = load i64, i64* %4, align 8
  store i64 %18, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ui, i32 0, i32 0), align 8
  ret void
}

declare dso_local i32 @memset(%struct.skb_shared_info*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
